--- a/HW1/README
+++ b/HW1/README
@@ -1,9 +1,12 @@
-HW1:
-輸入攤還債務可得到試算結果：
-1. 依序輸入 
+HW1:輸入攤還債務可得到試算結果
+1. 依序輸入資訊
   本金(萬元)
   期數(年)
   年利率(%)
   *輸入值皆不需要為整數，期數換算成月之後，若不滿一個月則直接捨去
 
 2. 可得到結果：月攤還本金(元)、總期(月)以及 表格 (每月之本金、利息、本金利息累計)，計算到小數點第三位。
+
+備註：關於code的解釋，寫在hw1.py之檔案中
+
+
