--- a/HW1/README
+++ b/HW1/README
@@ -8,6 +8,6 @@ HW1:輸入攤還債務可得到試算結果
 
 3. 可得到結果：月攤還本金(元)、總期(月)以及 表格 (每月之本金、利息、本金利息累計)，計算到小數點第三位。
 
-備註：關於code的解釋，寫在1.py之檔案中
+備註：關於code的解釋，寫在HW1.py之檔案中
 
 
