--- a/HW2/README
+++ b/HW2/README
@@ -1,1 +1,17 @@
-
+HW2說明：
+若要跑程式請點選個別檔案，HW2.py只是方便看全部的程式碼
+使用規則請依各個指示操作
+1.	YTM計算器
+(1)	請依行輸入Current Bond Price, Bond Par Value, Bond Coupon Rate(% p.a.), Year to maturity及 每年支付次數
+(2)	可得到YTM(到小數點後四位數)
+備註：若總期數較多，會耗時比較久，請耐心等候
+2.	Spot Rate計算器
+(1)	請依行輸入duration of spot rate(years), unit zero-coupon bond price。但若price不在(0,1)，會被退出程式，請注意。
+(2)	可得到Spot Rate以及Spot Force (到小數點後2位數)
+3.	Forward Rate計算器
+(1)	請依行輸入起始年、年期、起始年之unit zero-coupon bond price 以及 結束年之unit zero-coupon bond price。
+但若price不在(0,1) 或者 起始年之價格小於結束年，會被退出程式，請注意。
+(2)	可得到Forward Rate以及Forward Force (到小數點後2位數)
+4.	Forward Rate對照表產生器
+(1)	請依行輸入年限、期長、各期Bond price(以,隔開)以及各期par value以,隔開)。若輸入格式不正確，會出現錯誤。
+(2)	可得到Forward Rate對照表(零息債券)
