--- a/HW2/README
+++ b/HW2/README
@@ -1,5 +1,5 @@
 HW2說明：
-若要跑程式請點選個別檔案，HW2.py只是方便看全部的程式碼
+若要跑程式建議點選個別檔案，在子資料夾裡，HW2.py只是方便看全部的程式碼
 使用規則請依各個指示操作
 1.	YTM計算器
 (1)	請依行輸入Current Bond Price, Bond Par Value, Bond Coupon Rate(% p.a.), Year to maturity及 每年支付次數
