--- a/HW4/README
+++ b/HW4/README
@@ -3,4 +3,4 @@
 2. 決定是否使用題目之數據。是則輸入y，不使用則輸入n，再依需輸入。
 3. 即可得到call price & put price。(此題答案call price=$2.86,  put price=$12.806)
 
-所有的東西都有放在懶人包裡
+所有的說明都有放在懶人包裡
